--- a/popup.html
+++ b/popup.html
@@ -7,11 +7,13 @@
   <body>
     <h2>Choose a font:</h2>
     <select id="fontSelect">
-      <option value="Arial">Arial</option>
-      <option value="Comic Sans MS">Comic Sans MS</option>
-      <option value="Georgia">Georgia</option>
-      <option value="Courier New">Courier New</option>
-    </select>
+        <option disabled selected>Select a font</option>
+        <option value="Arial">Arial</option>
+        <option value="Comic Sans MS">Comic Sans MS</option>
+        <option value="Georgia">Georgia</option>
+        <option value="Courier New">Courier New</option>
+        <option value="OpenDyslexic">OpenDyslexic</option>
+      </select>
     <script src="popup.js"></script>
   </body>
 </html>
