--- a/popup.html
+++ b/popup.html
@@ -7,13 +7,17 @@
   <body>
     <h2>Choose a font:</h2>
     <select id="fontSelect">
-        <option disabled selected>Select a font</option>
+        <option selected value="Original font">Original font</option>
         <option value="Arial">Arial</option>
+        <option value="Baskerville">Baskerville</option>
+        <option value="Calibri">Calibri</option>
         <option value="Comic Sans MS">Comic Sans MS</option>
-        <option value="Georgia">Georgia</option>
         <option value="Courier New">Courier New</option>
+        <option value="Garamond">Garamond</option>
+        <option value="Georgia">Georgia</option>
         <option value="OpenDyslexic">OpenDyslexic</option>
-      </select>
+        <option value="Times New Roman">Times New Roman</option>
+    </select>
     <script src="popup.js"></script>
   </body>
 </html>
