error for chrome internal web pages

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Font Changer</title>
+    <title>Font Changer for Dyslexia</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
