--- a/popup.html
+++ b/popup.html
@@ -5,9 +5,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h2>Choose a font:</h2>
+    <h2>Change the font of your page.</h2>
     <select id="fontSelect">
-        <option selected value="Original font">Original font</option>
+        <option value="placeholder" disabled selected>Select a font</option>
+        <option value="Original font">Original font</option>
         <option value="Arial">Arial</option>
         <option value="Baskerville">Baskerville</option>
         <option value="Calibri">Calibri</option>
@@ -15,7 +16,7 @@
         <option value="Courier New">Courier New</option>
         <option value="Garamond">Garamond</option>
         <option value="Georgia">Georgia</option>
-        <option value="OpenDyslexic">OpenDyslexic</option>
+        <option value="OpenDyslexic">**OpenDyslexic**</option>
         <option value="Times New Roman">Times New Roman</option>
     </select>
     <script src="popup.js"></script>
